--- a/my_tutorials/docker_labs/intro/home.html
+++ b/my_tutorials/docker_labs/intro/home.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Home Page</title>
+  <title>Home Page WebApp</title>
 </head>
 <body>
-  <p><u><b>Hello World Into</b></u></p>
+  <p><u><b>Hello World Into. Golang</b></u></p>
   <p>The date today is {{.Date}}</p>
   <p>And the time is {{.Time}}</p>
 </body>
