updating new app

--- a/my_tutorials/docker_labs/intro/home.html
+++ b/my_tutorials/docker_labs/intro/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Home Page WebApp</title>
+  <title>Home Page Golang WebApp</title>
 </head>
 <body>
   <p><u><b>Hello World Into. Golang</b></u></p>
