--- a/web_application/demo-app/home.html
+++ b/web_application/demo-app/home.html
@@ -7,8 +7,8 @@
 <body>
    <div class="container h-100 d-flex justify-content-center">
     <div class="jumbotron my-auto">
-       <h3 class="display-4">Hello World POC Golang</h3>
-       <div class="alert alert-success" role="alert">  
+       <h3 class="display-4">POC Golang</h3>
+       <div class="alert alert-info" role="alert">  
          <p>The date today is {{.Date}}</p>
          <p>And the time is {{.Time}}</p>
        </div>
